@@ -1,5 +1,5 @@
 /*
- * $Id: hbexprb.c,v 1.20 2002/05/09 07:25:33 ronpinkas Exp $
+ * $Id: hbexprb.c,v 1.21 2002/05/14 16:43:52 ronpinkas Exp $
  */
 
 /*
@@ -2767,19 +2767,26 @@ static HB_EXPR_FUNC( hb_compExprUseAnd )
          break;
 
       case HB_EA_PUSH_POP:
-         if( HB_SUPPORT_HARBOUR )
+
+         // Clipper works that way - Will evaluate pRight only if pLeft is .T. but will not apply ADD.
+         if( hb_comp_bShortCuts )
          {
-            /* NOTE: This will not generate a runtime error if incompatible
-             * data type is used
-             */
-            HB_EXPR_USE( pSelf->value.asOperator.pLeft, HB_EA_PUSH_POP );
-            HB_EXPR_USE( pSelf->value.asOperator.pRight, HB_EA_PUSH_POP );
+            LONG lEndPos;
+
+            HB_EXPR_USE( pSelf->value.asOperator.pLeft, HB_EA_PUSH_PCODE );
+            lEndPos = HB_EXPR_PCODE1( hb_compGenJumpFalse, 0 );
+            HB_EXPR_USE( pSelf->value.asOperator.pRight, HB_EA_PUSH_PCODE );
+            HB_EXPR_GENPCODE1( hb_compGenPCode1, HB_P_POP );
+            HB_EXPR_PCODE1( hb_compGenJumpHere, lEndPos );
          }
          else
          {
-            HB_EXPR_USE( pSelf, HB_EA_PUSH_PCODE );
+            HB_EXPR_USE( pSelf->value.asOperator.pLeft, HB_EA_PUSH_PCODE );
+            HB_EXPR_GENPCODE1( hb_compGenPCode1, HB_P_POP );
+            HB_EXPR_USE( pSelf->value.asOperator.pRight, HB_EA_PUSH_PCODE );
             HB_EXPR_GENPCODE1( hb_compGenPCode1, HB_P_POP );
          }
+
          break;
 
       case HB_EA_STATEMENT:
